name:                ssa-anf
version:             0.1.0.0
synopsis:            SSA vs ANF
description:         SSA vs ANF
homepage:            http://github.com/jystic/ssa-anf
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          jacob@stanley.io
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable ssa-anf
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010

  build-depends:
      base           >= 4.8 && < 4.9
    , ansi-wl-pprint >= 0.6
    , containers     >= 0.5
